# shootinggame

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
.cache/clangd/index/: Entity.cpp.2305C466713F2A79.idx  Entity.cpp.3BA615AB70FFAC64.idx  Entity.hpp.43E01C69189632A0.idx  Entity.hpp.F515AB0D981DC221.idx  RenderComp.hpp.7AD71A3DE90A6A1A.idx  RenderComp.hpp.87D6626F02C6D10B.idx  RenderSystem.cpp.09F0F347EE66F885.idx  RenderSystem.cpp.A80A079FC1E1F73E.idx  RenderSystem.hpp.68693D2D760662C1.idx  RenderSystem.hpp.FBDF92838B1E3B77.idx  Scene.cpp.10EF6048659AD51E.idx  Scene.cpp.AD4AE4C379BFE632.idx  Scene.hpp.D78E9685B67D09BE.idx  Scene.hpp.D8EB0E8D26C61420.idx  _fixes.hpp.29401E8C52B3D867.idx  _fixes.hpp.F19BF2DD54F4A403.idx  _vectorize.hpp.103D6FC00A4D5B82.idx  _vectorize.hpp.F20D659E363B4B83.idx  adjacency_matrix.hpp.74BC1CDBFF0424C2.idx  adjacency_matrix.hpp.E7584B4475399475.idx  adl_pointer.hpp.A21C8D8E1B095567.idx  adl_pointer.hpp.C764360734FF5DB0.idx  algorithm.hpp.78B2DA9910B506E9.idx  algorithm.hpp.CD04C27188AED5A4.idx  any.hpp.6D3CEDA19236E229.idx  any.hpp.88B1FCD92E46E2CB.idx  attribute.h.2A2777608050BC66.idx  attribute.h.8B980025B00AB96F.idx  base.h.C8070C9EAAC77BB2.idx  bit.hpp.59457DF8035D9A1E.idx  bit.hpp.988EBFDC7A3EFB9C.idx  cache.hpp.AB7E0FC9DCAB6768.idx  cache.hpp.DC86D3791ADD4FE9.idx  common.hpp.67CC9D18FAE6ADAD.idx  common.hpp.D3803186C238CFBB.idx  component.hpp.5544B532239FAFD0.idx  component.hpp.F1FDA94690253865.idx  compressed_pair.hpp.20D5D91CABE7DC35.idx  compressed_pair.hpp.7F492691FBBB1E4F.idx  compute_common.hpp.2748E56DFF372E96.idx  (+622 more)
libraries/glad/: CMakeLists.txt  glad.c
libraries/glad/glad/: glad.h
src/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
src/components/: camera.cpp  camera.hpp  material.hpp  meshfilter.hpp  player.hpp  rendercomp.hpp  transform.cpp  transform.hpp
src/core/: time.cpp  time.hpp
src/core/debug/: log.cpp  log.hpp
src/core/gfx/: mesh.cpp  mesh.hpp  shader.cpp  shader.hpp
src/core/window/: window.cpp  window.hpp
src/ecs/: entity.cpp  entity.hpp  scene.cpp  scene.hpp
src/systems/: playersystem.cpp  playersystem.hpp  rendersystem.cpp  rendersystem.hpp
